alignment fix

--- a/src/components/cart/Cart.module.css
+++ b/src/components/cart/Cart.module.css
@@ -11,7 +11,7 @@
 .icon-qty {
   position: absolute;
   top: 1.8rem;
-  right: 2rem;
+  right: 6.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
